[package]
name = "hydrolox-pga3d"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
serde = ["dep:serde"]
f64 = []

[[bench]]
name = "ben"
harness = false

[dependencies]
serde = { version = "1.0.217", features = ["derive"], optional = true}
