[package]
name = "hydrolox-pga3d"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5", features = [] }
rand = "0.9"

[features]
serde = ["dep:serde"]
bytemuck = ["dep:bytemuck"]
f64 = []

[[bench]]
name = "ben"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}
bytemuck = { version = "1.0", features = ["derive"], optional = true}
